just about ready for beta 1 - needs final testing and README updates

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 Theme Name: Carrington Blog
 Theme URI: http://carringtontheme.com
 Description: A developer friendly theme with atomic templates and an elegant override hierarchy.
-Version: 2.0dev
+Version: 2.0b1
 Author: Crowd Favorite
 Author URI: http://crowdfavorite.com
 Tags: widgets, customizable, 3-column, framework, semantic, white, red, gray, carrington, microformats, hatom, hcard
