--- a/css/carrington-blog.css
+++ b/css/carrington-blog.css
@@ -613,3 +613,9 @@ a#TB_prev:hover,
 a#TB_next:hover {
 	height:100%;
 }
+a#TB_prev:hover {
+	background:url(../img/lightbox/prevlabel.gif) no-repeat left center;
+}
+a#TB_next:hover {
+	background:url(../img/lightbox/nextlabel.gif) no-repeat right center;
+}
