WP.org supported tags

--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
 Theme Name: Carrington Blog
 Theme URI: http://carringtontheme.com
 Description: A developer friendly theme with atomic templates and an elegant override hierarchy.
-Version: 2.0b1
+Version: 2.0
 Author: Crowd Favorite
 Author URI: http://crowdfavorite.com
-Tags: widgets, customizable, 3-column, framework, semantic, white, red, gray, carrington, microformats, hatom, hcard
+Tags: red, silver, white, dark, light, two-columns, three-columns, right-sidebar, fixed-width, custom-colors, custom-header, theme-options, threaded-comments, microformats
+
 
 // This file is part of the Carrington Blog Theme for WordPress
 // http://carringtontheme.com
