--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 Theme Name: Carrington Blog
 Theme URI: http://carringtontheme.com
-Description: A developer friendly theme with atomic templates and an elegant override hierarchy.
+Description: A rich blogger friendly theme with customizable header, colors and AJAX options; and developer friendly theme with atomic templates and an elegant override hierarchy.
 Version: 2.1
 Author: Crowd Favorite
 Author URI: http://crowdfavorite.com
