--- a/css/ie.css
+++ b/css/ie.css
@@ -23,7 +23,7 @@ ul li,
 .entry-summary,
 .commentlist .hentry,
 .widget,
-.comment-form,
+.respond,
 #content,
 #sidebar,
 #carrington-about .about {zoom:1;}
