--- a/css/img.css
+++ b/css/img.css
@@ -70,7 +70,7 @@
 	background-position:left top;
 }
 
-form.comment-form {
+.respond {
 	background-image: url(../img/watermark-light.gif);
 	background-repeat:repeat-x;
 	background-position:left top;
