--- a/style.css
+++ b/style.css
@@ -9,10 +9,9 @@ Author URI: http://crowdfavorite.com
 Tags: red, silver, white, dark, light, two-columns, three-columns, right-sidebar, fixed-width, custom-colors, custom-header, theme-options, threaded-comments, microformats
 
 
-// This file is part of the Carrington Blog Theme for WordPress
-// http://carringtontheme.com
+// This file is part of the FaveBlog Theme for WordPress
 //
-// Copyright (c) 2008-2009 Crowd Favorite, Ltd. All rights reserved.
+// Copyright (c) 2008-2012 Crowd Favorite, Ltd. All rights reserved.
 // http://crowdfavorite.com
 //
 // Released under the GPL license
