update URL and name

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 
-Theme Name: Carrington Blog
-Theme URI: http://carringtontheme.com
+Theme Name: FaveBlog
+Theme URI: http://crowdfavorite.com/wordpress/themes/faveblog/
 Description: A rich blogger friendly theme with customizable header, colors and AJAX options; and developer friendly theme with atomic templates and an elegant override hierarchy.
 Version: 2.3.1
 Author: Crowd Favorite
