--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ Version: 2.3.1
 Author: Crowd Favorite
 Author URI: http://crowdfavorite.com
 Tags: red, silver, white, dark, light, two-columns, three-columns, right-sidebar, fixed-width, custom-colors, custom-header, theme-options, threaded-comments, microformats
-
+License: GNU General Public License
+License URI: license.txt
 
 // This file is part of the Carrington Blog Theme for WordPress
 // http://carringtontheme.com
