--- a/style.css
+++ b/style.css
@@ -1,33 +1,30 @@
-/*
-
-Theme Name: Carrington Blog
-Theme URI: http://carringtontheme.com
-Description: A rich blogger friendly theme with customizable header, colors and AJAX options; and developer friendly theme with atomic templates and an elegant override hierarchy.
-Version: 2.3.1
-Author: Crowd Favorite
-Author URI: http://crowdfavorite.com
-Tags: red, silver, white, dark, light, two-columns, three-columns, right-sidebar, fixed-width, custom-colors, custom-header, theme-options, threaded-comments, microformats
-License: GNU General Public License
-License URI: license.txt
-
-// This file is part of the Carrington Blog Theme for WordPress
-// http://carringtontheme.com
-//
-// Copyright (c) 2008-2009 Crowd Favorite, Ltd. All rights reserved.
-// http://crowdfavorite.com
-//
-// Released under the GPL license
-// http://www.opensource.org/licenses/gpl-license.php
-//
-// **********************************************************************
-// This program is distributed in the hope that it will be useful, but
-// WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
-// **********************************************************************
-
-NOTE: This file is not used in this theme but is included for WordPress theme expected format compatibility - see the css/ dir for actual theme CSS
-
-*/
+/** 
+ * Theme Name: Carrington Blog
+ * Theme URI: http://carringtontheme.com
+ * Description: A rich blogger friendly theme with customizable header, colors and AJAX options; and developer friendly theme with atomic templates and an elegant override hierarchy.
+ * Version: 2.3.1
+ * Author: Crowd Favorite
+ * Author URI: http://crowdfavorite.com/
+ * License: GNU General Public License
+ * License URI: http://wordpress.org/about/gpl/
+ * Tags: red, silver, white, dark, light, two-columns, three-columns, right-sidebar, fixed-width, custom-colors, custom-header, theme-options, threaded-comments, microformats
+ *
+ * This file is part of the Carrington Blog Theme for WordPress
+ * http://carringtontheme.com
+ *
+ * Copyright (c) 2008-2009 Crowd Favorite, Ltd. All rights reserved.
+ * http://crowdfavorite.com
+ *
+ * Released under the GPL license
+ * http://www.opensource.org/licenses/gpl-license.php
+ * **********************************************************************
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
+ * **********************************************************************
+ *
+ * NOTE: This file is not used in this theme but is included for WordPress theme expected format compatibility - see the css/ dir for actual theme CSS
+ */
 
 /* including for compatibility */
 
